Fixed image path.

--- a/aldb.html
+++ b/aldb.html
@@ -416,26 +416,26 @@
 
                                     <div class="dropdown affection-drop" sel="0">
                                         <button class="btn btn-warning dropdown-toggle" data-flip="false" style="background:#EEEEEE; border:1px solid #AAAAAA" type="button" id="ss" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            <img id="sel-affection-drop" src="img/affection/affection-0.png" />
+                                            <img id="sel-affection-drop" src="img/misc/affection-0.png" />
                                         </button>
                                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                             <a class="dropdown-item affection-option sel-option" href="#" opt="0">
-                                                <img src="img/affection/affection-0.png" width="45" height="45"><div class="option-desc">Normal</div>
+                                                <img src="img/misc/affection-0.png" width="45" height="45"><div class="option-desc">Normal</div>
                                             </a>
                                             <a class="dropdown-item affection-option sel-option" href="#" opt="1">
-                                                <img src="img/affection/affection-1.png" width="45" height="45"><div class="option-desc">Friendly<br />(+1% stats)</div>
+                                                <img src="img/misc/affection-1.png" width="45" height="45"><div class="option-desc">Friendly<br />(+1% stats)</div>
                                             </a>
                                             <a class="dropdown-item affection-option sel-option" href="#" opt="2">
-                                                <img src="img/affection/affection-2.png" width="45" height="45"><div class="option-desc">Like<br />(+3% stats)</div>
+                                                <img src="img/misc/affection-2.png" width="45" height="45"><div class="option-desc">Like<br />(+3% stats)</div>
                                             </a>
                                             <a class="dropdown-item affection-option sel-option" href="#" opt="3">
-                                                <img src="img/affection/affection-3.png" width="45" height="45"><div class="option-desc">Love<br />(+6% stats)</div>
+                                                <img src="img/misc/affection-3.png" width="45" height="45"><div class="option-desc">Love<br />(+6% stats)</div>
                                             </a>
                                             <a class="dropdown-item affection-option sel-option" href="#" opt="4">
-                                                <img src="img/affection/affection-4.png" width="45" height="45"><div class="option-desc">Oath<br />(+9% stats)</div>
+                                                <img src="img/misc/affection-4.png" width="45" height="45"><div class="option-desc">Oath<br />(+9% stats)</div>
                                             </a>
                                             <a class="dropdown-item affection-option sel-option" href="#" opt="5">
-                                                <img src="img/affection/affection-5.png" width="45" height="45"><div class="option-desc">Oath Max<br />(+12% stats)</div>
+                                                <img src="img/misc/affection-5.png" width="45" height="45"><div class="option-desc">Oath Max<br />(+12% stats)</div>
                                             </a>
                                         </div>
                                     </div>
